--- a/registry/package.json
+++ b/registry/package.json
@@ -1,10 +1,18 @@
 {
   "name": "registry-microservice",
-  "author": "Bruno Bossola",
-  "private": true,
+  "version": "0.1.0",
+  "author": "SYTAC - sLab",
+  "scripts": {
+    "start": "babel-node registry.js --history-api-fallback"
+  },
   "dependencies": {
     "express": "^4.13.3",
-    "prettyjson": "^1.1.3",
-    "unirest": "^0.4.2"
+    "node-fetch": "^2.1.2",
+    "prettyjson": "^1.1.3"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.1"
   }
 }
