--- a/registry/package.json
+++ b/registry/package.json
@@ -7,8 +7,7 @@
   },
   "dependencies": {
     "express": "^4.13.3",
-    "node-fetch": "^2.1.2",
-    "prettyjson": "^1.1.3"
+    "node-fetch": "^2.1.2"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
