renaming, comments and refactoring.
It is now possible to start every Node service via `npm start`

--- a/nodejs-express-registry/package.json
+++ b/nodejs-express-registry/package.json
@@ -1,7 +1,7 @@
 {
   "name": "registry-microservice",
   "version": "0.1.0",
-  "author": "SYTAC - sLab",
+  "author": "Bruno Bossola, Justin Seyvecou, Tonino Catapano",
   "scripts": {
     "start": "babel-node registry.js --history-api-fallback"
   },
