--- a/nodejs-express-service-random/package.json
+++ b/nodejs-express-service-random/package.json
@@ -1,9 +1,12 @@
 {
   "name": "rand-microservice",
-  "author": "Bruno Bossola",
+  "author": "Bruno Bossola, Tonino Catapano",
   "private": true,
   "dependencies": {
     "express": "^4.13.3",
     "unirest": "^0.4.2"
+  },
+  "scripts": {
+    "start": "node rand"
   }
 }
