--- a/nodejs-express-service-edge/package.json
+++ b/nodejs-express-service-edge/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "async": "^1.4.2",
     "express": "^4.13.3",
+    "redis": "^2.8.0",
     "request": "^2.61.0",
     "unirest": "^0.5.1"
   },
